...
        android:textAlignment="center"
        android:textColor="#E77111"
        android:textSize="22dp"
        android:textStyle="bold|italic" />

    <Button
        android:id="@+id/main_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/buttons"
        android:padding="12dp"
        android:text="Already have an account?  Login"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

...
