...
    android:layout_marginTop="10dp"
    android:layout_marginEnd="15dp"
    android:layout_marginBottom="10dp"
    app:cardElevation="15dp">

    <RelativeLayout
        android:id="@+id/display_products_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/product_name_card"
            android:layout_width="match_parent"
...
            android:textSize="20dp"
            android:textStyle="bold"
            android:textColor="#F54808"
            />

        <ImageView
            android:id="@+id/product_image_card"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/product_name_card"
            android:layout_marginTop="5dp"
            android:scaleType="centerCrop" />

...
