...
    <string name="text_orderStatus2">Delivered</string>
    <string name="text_placedOn1">Placed on 29 July 2020 20 : 16 : 12</string>
    <string name="text_paidOn1">Paid on 29 July 2020 20 : 16 : 20</string>
    <string name="text_viewOrder">View order</string>
    <string name="text_shopMore">Shop more</string>
    <string name="text_noOrdersToPay">There are no orders to pay!</string>
    <string name="text_cancelOrder">Cancel order</string>
    <string name="text_viewProduct">View product</string>
    <string name="text_cancelOrderMessage2">cancel this order?</string>
    <string name="text_exit">Exit</string>
    <string name="title_activity_my_account">MyAccount</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
...
